[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"

# used for day 3 and 7
itertools = "0.12.0"

# used in day 4
num = "0.4.1"

# used in day 5
rayon = "1.8.0"